refactor rpc
