# docs/match/match_swagger.json
@@ -51,53 +51,6 @@
                     }
                 }
             }
-        },
-        "/match/forwardauth": {
-            "get": {
-                "description": "Traefik forward auth endpoint for channel authentication",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "match"
-                ],
-                "summary": "Forward auth",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "channel authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "none"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/common.ErrResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/common.ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/common.ErrResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
