# pkg/user/http_api.go
@@ -9,22 +9,25 @@ import (
 	"github.com/minghsu0107/go-random-chat/pkg/common"
 )
 
-// @Summary Create an user
-// @Description Register a new user
+// @Summary Create a local user
+// @Description Register a new local user
 // @Tags user
 // @Produce json
-// @Param user body CreateUserRequest true "new user"
+// @Param user body CreateLocalUserRequest true "new user"
 // @Success 201 {object} UserPresenter
 // @Failure 400 {object} common.ErrResponse
 // @Failure 500 {object} common.ErrResponse
 // @Router /user [post]
-func (r *HttpServer) CreateUser(c *gin.Context) {
-	var createUserReq CreateUserRequest
-	if err := c.ShouldBindJSON(&createUserReq); err != nil {
+func (r *HttpServer) CreateLocalUser(c *gin.Context) {
+	var createLocalUserReq CreateLocalUserRequest
+	if err := c.ShouldBindJSON(&createLocalUserReq); err != nil {
 		response(c, http.StatusBadRequest, common.ErrInvalidParam)
 		return
 	}
-	user, err := r.userSvc.CreateUser(c.Request.Context(), createUserReq.Name)
+	user, err := r.userSvc.CreateUser(c.Request.Context(), &User{
+		Name:     createLocalUserReq.Name,
+		AuthType: LocalAuth,
+	})
 	if err != nil {
 		r.logger.Error(err)
 		response(c, http.StatusInternalServerError, common.ErrServer)
@@ -48,7 +51,7 @@ func (r *HttpServer) CreateUser(c *gin.Context) {
 // @Description Get user information
 // @Tags user
 // @Produce json
-// @Param uid query string false "target user id; defaults to self user id if leaved empty"
+// @Param uid query string true "target user id"
 // @Param Cookie header string true "session id cookie"
 // @Success 200 {object} UserPresenter
 // @Failure 400 {object} common.ErrResponse
@@ -57,19 +60,52 @@ func (r *HttpServer) CreateUser(c *gin.Context) {
 // @Failure 500 {object} common.ErrResponse
 // @Router /user [get]
 func (r *HttpServer) GetUser(c *gin.Context) {
-	userID, ok := c.Request.Context().Value(common.UserKey).(uint64)
+	_, ok := c.Request.Context().Value(common.UserKey).(uint64)
 	if !ok {
 		response(c, http.StatusUnauthorized, common.ErrUnauthorized)
 		return
 	}
-	uid := c.Query("uid")
-	if uid != "" {
-		var err error
-		userID, err = strconv.ParseUint(uid, 10, 64)
-		if err != nil {
-			response(c, http.StatusBadRequest, common.ErrInvalidParam)
+	var getUserReq GetUserRequest
+	if err := c.ShouldBindQuery(&getUserReq); err != nil {
+		response(c, http.StatusBadRequest, common.ErrInvalidParam)
+		return
+	}
+	userID, err := strconv.ParseUint(getUserReq.Uid, 10, 64)
+	if err != nil {
+		response(c, http.StatusBadRequest, common.ErrInvalidParam)
+		return
+	}
+	user, err := r.userSvc.GetUserByID(c.Request.Context(), userID)
+	if err != nil {
+		if errors.Is(err, ErrUserNotFound) {
+			response(c, http.StatusNotFound, ErrUserNotFound)
 			return
 		}
+		r.logger.Error(err)
+		response(c, http.StatusInternalServerError, common.ErrServer)
+		return
+	}
+	c.JSON(http.StatusOK, &UserPresenter{
+		ID:   strconv.FormatUint(userID, 10),
+		Name: user.Name,
+	})
+}
+
+// @Summary Get self user
+// @Description Get self user information
+// @Tags user
+// @Produce json
+// @Param Cookie header string true "session id cookie"
+// @Success 200 {object} UserPresenter
+// @Failure 401 {object} common.ErrResponse
+// @Failure 404 {object} common.ErrResponse
+// @Failure 500 {object} common.ErrResponse
+// @Router /user/me [get]
+func (r *HttpServer) GetUserMe(c *gin.Context) {
+	userID, ok := c.Request.Context().Value(common.UserKey).(uint64)
+	if !ok {
+		response(c, http.StatusUnauthorized, common.ErrUnauthorized)
+		return
 	}
 	user, err := r.userSvc.GetUserByID(c.Request.Context(), userID)
 	if err != nil {
@@ -123,13 +159,17 @@ func (r *HttpServer) OAuthGoogleCallback(c *gin.Context) {
 		c.Redirect(http.StatusTemporaryRedirect, "/")
 		return
 	}
-	googleUser, err := r.userSvc.GetUserDataFromGoogle(c.Request.Context(), token.AccessToken)
+	googleUser, err := r.userSvc.GetGoogleUser(c.Request.Context(), token.AccessToken)
 	if err != nil {
 		r.logger.Error(err)
 		c.Redirect(http.StatusTemporaryRedirect, "/")
 		return
 	}
-	user, err := r.userSvc.GetOrCreateGoogleUser(c.Request.Context(), googleUser.Email, googleUser.Name)
+	user, err := r.userSvc.GetOrCreateUserByOAuth(c.Request.Context(), &User{
+		Email:    googleUser.Email,
+		Name:     googleUser.Name,
+		AuthType: GoogleAuth,
+	})
 	if err != nil {
 		r.logger.Error(err)
 		c.Redirect(http.StatusTemporaryRedirect, "/")
